tests-integration/tests/roundtrip/invalid/semantic/typecheck/mismatched_inequality_set_matrix/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/mismatched_inequality_set_matrix/input.essence:3:16:
  |
3 | such that x != y
  |                ^
Type error:
	Expected: set of int
	Got: matrix indexed by [int, int] of int

